footer and clean up

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glossy-portfolio",
-  "homepage": "https://ericaemorabtio.github.io.Glossy-Portfolio",
+  "homepage": "https://ericaemorabito.github.io/Glossy-Portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
